--- a/EatFast/EatFast/Pages/CreateMainProjectPage.xaml
+++ b/EatFast/EatFast/Pages/CreateMainProjectPage.xaml
@@ -43,4 +43,9 @@
             Click="CreateProject"/>
 
     </Grid>
+    <Page.BottomAppBar>
+        <AppBar>
+            <AppBarButton Label="Back" Icon="Back" Click="GoBack"/>
+        </AppBar>
+    </Page.BottomAppBar>
 </Page>
