--- a/EatFast/EatFast/Pages/LiderPage.xaml
+++ b/EatFast/EatFast/Pages/LiderPage.xaml
@@ -73,5 +73,9 @@
             Click="SendTask"/>
 
     </Grid>
-
+    <Page.BottomAppBar>
+        <AppBar>
+            <AppBarButton Label="Back" Icon="Back" Click="GoBack"/>
+        </AppBar>
+    </Page.BottomAppBar>
 </Page>
