--- a/EatFast/EatFast/Pages/MainTaskPage.xaml
+++ b/EatFast/EatFast/Pages/MainTaskPage.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="50"/>
             <RowDefinition Height="7*"/>
             <RowDefinition Height="32"/>
-            <RowDefinition Height="0.8*"/>
+            <RowDefinition Height="1.2*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -119,10 +119,16 @@
             Grid.ColumnSpan="2"
             Style="{StaticResource Cool}"
             HorizontalAlignment="Stretch"
+            VerticalAlignment="Top"
             FontSize="14"
             Margin="0,4,0,0"
             Content="Create Main Project"
             Click="GoToCreateMainProject"/>
 
     </Grid>
+    <Page.BottomAppBar>
+        <AppBar>
+            <AppBarButton Label="Back" Icon="Back" Click="GoBack"/>
+        </AppBar>
+    </Page.BottomAppBar>
 </Page>
