--- a/EatFast/EatFast/Pages/OrganisationSummaryPage.xaml
+++ b/EatFast/EatFast/Pages/OrganisationSummaryPage.xaml
@@ -19,12 +19,19 @@
         <Button Name="MainProject" 
                 Content="Develop next generation MMORPG game"
                 Click="MainProject_Click"
-                Grid.Row="1"/>
-        <ListBox Grid.Row="2">
+                Grid.Row="1"
+                Style="{StaticResource Cool}"
+                Width="Auto"/>
+        <ListView Grid.Row="2">
             <TextBlock Text="Team 1 Graphics"/>
             <TextBlock Text="Team 2 Sound"/>
             <TextBlock Text="Team 3 Server"/>
             <TextBlock Text="Team 4 Functionality"/>
-        </ListBox>
+        </ListView>
     </Grid>
+    <Page.BottomAppBar>
+        <AppBar>
+            <AppBarButton Label="Back" Icon="Back" Click="GoBack"/>
+        </AppBar>
+    </Page.BottomAppBar>
 </Page>
