--- a/EatFast/EatFast/Pages/LocationsPage.xaml
+++ b/EatFast/EatFast/Pages/LocationsPage.xaml
@@ -14,10 +14,19 @@
                 <ListBoxItem Content="{Binding}" />
             </ListBox>
         </Grid>
-        <Page.BottomAppBar>
-            <AppBar>
-                <AppBarButton Label="Back" Icon="Back" Click="GoBack"/>
-            </AppBar>
-        </Page.BottomAppBar>
+    <Page.BottomAppBar>
+        <AppBar>
+            <StackPanel Orientation="Horizontal">
+                <AppBarButton Label="Back" 
+                                      Icon="Back" 
+                                      Click="GoBack"/>
+                <Button Content="My Account"
+                                HorizontalContentAlignment="Left"
+                                Width="150" 
+                                Height="40"
+                                Click="GotoMyAccount"/>
+            </StackPanel>
+        </AppBar>
+    </Page.BottomAppBar>
 
 </Page>
