--- a/EatFast/EatFast/Pages/TasksPage.xaml
+++ b/EatFast/EatFast/Pages/TasksPage.xaml
@@ -11,7 +11,7 @@
         <DataTemplate x:Name="memberList">
             <Grid Holding="Grid_Holding"
                 HorizontalAlignment="Stretch"
-                Width="330">
+                Width="290">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="40"/>
                     <ColumnDefinition Width="1*"/>
@@ -108,7 +108,16 @@
     </Grid>
     <Page.BottomAppBar>
         <AppBar>
-            <AppBarButton Label="Back" Icon="Back" Click="GoBack"/>
+            <StackPanel Orientation="Horizontal">
+                <AppBarButton Label="Back" 
+                                      Icon="Back" 
+                                      Click="GoBack"/>
+                <Button Content="My Account"
+                                HorizontalContentAlignment="Left"
+                                Width="150" 
+                                Height="40"
+                                Click="GotoMyAccount"/>
+            </StackPanel>
         </AppBar>
     </Page.BottomAppBar>
 </Page>
