--- a/EatFast/EatFast/Pages/CurrentProject.xaml
+++ b/EatFast/EatFast/Pages/CurrentProject.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Teamer.Pages.CurrentTask"
+    x:Class="Teamer.Pages.CurrentProject"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Teamer.Pages"
@@ -52,7 +52,7 @@
             <TextBlock
                 Margin="15,0,0,0"
                 VerticalAlignment="Bottom"
-                Text="{Binding TaskName}"
+                Text="{Binding Name}"
                 FontSize="30"/>
         </StackPanel>
 
