--- a/EatFast/EatFast/Pages/MainTaskPage.xaml
+++ b/EatFast/EatFast/Pages/MainTaskPage.xaml
@@ -22,12 +22,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <!--<TextBlock VerticalAlignment="Bottom" 
-                   Text="Telerik" 
-                   HorizontalAlignment="Left" 
-                   FontSize="33"/>-->
-
-        <Grid  Grid.ColumnSpan="2">
+        <Grid Name="innerDataContext"  DataContext="{Binding}" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
